# Generated by Django 6.1 on 2026-08-31 22:36

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('students', '0001_initial'),
        ('tutoring', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Agreement',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('descripcion', models.TextField(verbose_name='descripción')),
                ('fecha_limite', models.DateField(db_index=True, verbose_name='fecha límite')),
                ('estado', models.CharField(choices=[('PENDIENTE', 'Pendiente'), ('EN_PROCESO', 'En Proceso'), ('CONCLUIDO', 'Concluido'), ('VENCIDO', 'Vencido')], db_index=True, default='PENDIENTE', max_length=20, verbose_name='estado')),
                ('fecha_conclusion', models.DateField(blank=True, null=True, verbose_name='fecha de conclusión')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='fecha de creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='última actualización')),
                ('created_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='created_agreements', to=settings.AUTH_USER_MODEL)),
                ('responsable', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='assigned_agreements', to=settings.AUTH_USER_MODEL)),
                ('session', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='agreements', to='tutoring.tutoringsession')),
                ('student', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='agreements', to='students.student')),
            ],
            options={
                'verbose_name': 'acuerdo / compromiso',
                'verbose_name_plural': 'acuerdos y compromisos',
                'ordering': ['-fecha_limite', '-created_at'],
            },
        ),
        migrations.CreateModel(
            name='AgreementAuditLog',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('estado_anterior', models.CharField(max_length=20, verbose_name='estado anterior')),
                ('estado_nuevo', models.CharField(max_length=20, verbose_name='estado nuevo')),
                ('comentario', models.TextField(blank=True, default='', verbose_name='comentario')),
                ('fecha_cambio', models.DateTimeField(auto_now_add=True, verbose_name='fecha de cambio')),
                ('agreement', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='audit_logs', to='agreements.agreement')),
                ('user', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='agreement_status_changes', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'bitácora de cambio de estado de acuerdo',
                'verbose_name_plural': 'bitácoras de cambio de estado de acuerdos',
                'ordering': ['-fecha_cambio'],
            },
        ),
    ]
